--- a/.temp/palette.styl
+++ b/.temp/palette.styl
@@ -2,4 +2,4 @@
 // null
 
 // User's Palette
-@import("E:/study/blog/docs/.vuepress/styles/palette.styl")
+@import("D:/study/blog/docs/.vuepress/styles/palette.styl")
